--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jstohtml",
   "description": "Compact record format HTML at JavaScript",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "author": {
     "name": "Denis Seleznev",
     "email": "hcodes@yandex.ru",
@@ -29,13 +29,13 @@
     "README.md"
   ],
   "devDependencies": {
-    "chai": "~3.4.1",
-    "mocha": "~2.3.4",
-    "gulp": "~3.9.0",
-    "gulp-rename": "~1.2.2",
-    "gulp-uglify": "~1.5.1",
-    "istanbul": "~0.4.2",
-    "eslint": "~1.10.3"
+    "chai": "3.5.x",
+    "mocha": "3.0.x",
+    "gulp": "3.9.x",
+    "gulp-rename": "1.2.x",
+    "gulp-uglify": "2.0.x",
+    "istanbul": "0.4.x",
+    "eslint": "3.x"
   },
   "scripts": {
     "test": "npm run-script gulp && npm run-script eslint && npm run-script unit-test-coverage",
