--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
+    "parserOptions": {
+        "ecmaVersion": 6
+    },
     "rules": {
         "semi": [2, "always"],
         "quotes": [2, "single"]
