--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "jstohtml",
   "description": "Compact record format HTML at JavaScript",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "author": {
     "name": "Denis Seleznev",
     "email": "hcodes@yandex.ru",
     "url": "https://github.com/hcodes/jstohtml"
   },
-  "main": "dist/jstohtml.js",
+  "main": "index.js",
   "homepage": "https://github.com/hcodes/jstohtml",
   "license": "MIT",
   "repository": {
@@ -21,7 +21,7 @@
     "html"
   ],
   "engines": {
-    "node": ">= 4"
+    "node": ">= 8"
   },
   "files": [
     "dist",
@@ -30,18 +30,20 @@
   ],
   "devDependencies": {
     "chai": "^4.2.0",
-    "eslint": "^5.10.0",
-    "gulp": "^4.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.1",
+    "eslint": "^5.11.1",
     "istanbul": "^0.4.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "rollup": "^1.0.0",
+    "uglify-js": "^3.4.9"
   },
   "scripts": {
     "test": "npm run-script build && npm run-script eslint && npm run-script unit-test-coverage",
-    "build": "./node_modules/.bin/gulp",
+    "uglifyjs": "./node_modules/.bin/uglifyjs dist/jstohtml.js --compress --comments '/^!/' -o dist/jstohtml.min.js",
+    "rollup": "./node_modules/.bin/rollup -c ./rollup.config.js",
+    "build": "cp src/index.js dist/jstohtml.esm.js && npm run rollup && npm run uglifyjs",
     "eslint": "./node_modules/.bin/eslint .",
     "unit-test": "./node_modules/.bin/mocha -u bdd -R spec --recursive test",
     "unit-test-coverage": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- -u bdd -R spec --recursive test"
-  }
+  },
+  "typings": "./index.d.ts"
 }
