--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.nyc_output/
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -27,7 +27,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
+
 
 # Thumbnails
 ._*
