--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "jstohtml",
   "description": "Compact record format HTML at JavaScript",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "author": {
     "name": "Denis Seleznev",
     "email": "hcodes@yandex.ru",
     "url": "https://github.com/hcodes/jstohtml"
   },
-  "main": "index.js",
+  "main": "dist/jstohtml.js",
+  "module": "dist/jstohtml.esm.js",
   "homepage": "https://github.com/hcodes/jstohtml",
   "license": "MIT",
   "repository": {
